<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/abu"
    android:padding="10dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">
            <FrameLayout
                android:id="@+id/big"
                android:layout_width="120dp"
                android:layout_height="140dp">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/userImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/user_image"
                    android:src="@color/abu_gelap"
                    app:civ_border_color="@color/abu_gelap2"
                    app:civ_border_width="2dp" />
                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/favButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:src="@drawable/ic_fav_on"/>
            </FrameLayout>

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@id/big"
                android:text="@string/name"
                android:textColor="@color/abu_gelap3"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/name"
                android:layout_marginStart="15dp"
                android:layout_toEndOf="@id/big"
                android:text="@string/username"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/userName"
                android:layout_marginTop="5dp"
                android:layout_marginStart="15dp"
                android:layout_toEndOf="@id/big"
                android:text="@string/company"
                android:textSize="12sp"
                android:drawablePadding="10dp"
                app:drawableStartCompat="@drawable/ic_company" />

            <TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/company"
                android:layout_marginTop="5dp"
                android:layout_marginStart="15dp"
                android:layout_toEndOf="@id/big"
                android:text="@string/location"
                android:textSize="12sp"
                android:drawablePadding="10dp"
                app:drawableStartCompat="@drawable/ic_location" />

            <TextView
                android:id="@+id/repository"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/location"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_toEndOf="@id/big"
                android:textStyle="bold"
                android:text="@string/followingcount"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/fol1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/location"
                android:layout_marginTop="10dp"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@id/repository"
                android:text="@string/following"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/follower"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/location"
                android:layout_marginTop="10dp"
                android:layout_marginStart="25dp"
                android:layout_toEndOf="@id/fol1"
                android:text="@string/followercount"
                android:textStyle="bold"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/foll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/location"
                android:layout_marginTop="10dp"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@id/follower"
                android:text="@string/follower"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/following"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/repository"
                android:layout_marginTop="5dp"
                android:layout_marginStart="15dp"
                android:layout_toEndOf="@id/big"
                android:text="@string/repocount"
                android:textStyle="bold"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/repository"
                android:layout_marginTop="5dp"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@id/following"
                android:text="@string/repositories"
                android:textSize="12sp" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@color/abu_gelap3"
        app:tabTextColor="@android:color/white"
        app:tabIndicatorHeight="8dp"
        app:tabRippleColor="@null"
        app:tabIndicatorFullWidth="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="260dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>